    survival model can be provided, which allows the inclusion of, e.g.,
    day of the week effects. Finally, the order of
    the polynomial created by the change-points in the discrete time
    survival model can now be specified. For further details see the
    work of Guenther et al. (2020) about nowcasting the Covid-19
    outbreak in Bavaria, Germany.
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item Bug fix in the \code{farringtonFlexible()}-function, which for
    the argument \code{thresholdMethod=="nbPlugin"} and
    \code{thresholdMethod=="muan"} unfortunately computed the limit as
    an \code{(1-alpha/2)} prediction interval instead of the documented
    \eqn{(1-alpha)} prediction interval. The default method \code{"delta"}
    worked as expected.

    \item In \code{hhh4()} models without AR component,
    the matrix of fitted values could lack column names.

    \item Experimental time-varying neighbourhood weights in
    \code{hhh4()} were indexed differently in model fitting and in the
    \code{simulate()} method (undocumented behaviour). Both now use the
    latter variant, where the mean at time \eqn{t} uses products of
    weights at time \eqn{t} and observed counts at time \eqn{t-1}.
    [reported by Johannes Bracher]
  }
}
}

\section{Changes in surveillance version 1.18.0 (2020-05-02)}{

\subsection{NEW FEATURES}{
  \itemize{
    \item New spatial interaction function for \code{twinstim()}:
    \code{siaf.exponential()} implements the exponential kernel
    \eqn{f(x) = exp(-x/\sigma)}, which is a useful alternative
    if the two-parameter power-law kernel is not identifiable.
    
    \item The \code{plot}-type \code{"maps"} for \code{"hhh4"} fits,
    \code{plotHHH4_maps()}, now allows for map-specific color keys
    via \code{zmax = NA} (useful for \code{prop = TRUE}).
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item The \code{nowcast()}-function now also works for